# incubator-teaclave-sgx-sdk

.github/workflows/: sgx-world.yml  sim-example.yml
common/inc/: string.h
dockerfile/: 02_binutils.sh  03_sdk.sh  Dockerfile.1804.nightly  Dockerfile.2004.nightly  Dockerfile.2204.nightly  Dockerfile.centos8.nightly  build.sh
samplecode/helloworld/: Makefile
samplecode/helloworld/enclave/: Cargo.toml  Makefile  enclave.edl
samplecode/helloworld/enclave/src/: lib.rs
sgx_tprotected_fs/src/: fs.rs
sgx_trts/src/feature/: mod.rs
sgx_tstd/src/: sgxfs.rs
sgx_tstd/src/sys/: sgxfs.rs
sgx_tstd/src/thread/: local.rs
sgx_unwind/libunwind/: configure~
