# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "helloworld"
version = "1.0.0"
authors = ["The Teaclave Authors"]
edition = "2021"

[lib]
name = "helloworld"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_vendor = "teaclave"))'.dependencies]
sgx_types = { path = "../../../sgx_types" }
sgx_tstd = { path = "../../../sgx_tstd" }

[dependencies]
wasmer = { version = "2.2.1", default-features = false, features = ["sys-default", "universal", "cranelift"] }
anyhow = "1.0"

# v0.9.8 has issues with the 1.61.0-nightly (ea2a21c 2022-02-15) compiler
crossbeam-epoch = "=0.9.7"
